--- a/bin.ipynb
+++ b/bin.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not Found\n"
+      "Found 70 at the index 5\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
     "\n",
     "\n",
     "numbers=[10, 20, 25, 30, 50, 70, 80]\n",
-    "target = 90\n",
+    "target = 70\n",
     "\n",
     "ret=binsearch(numbers, target)\n",
     "if ret != -1:\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
