--- a/bin.ipynb
+++ b/bin.ipynb
@@ -80,9 +80,7 @@
     }
    ],
    "source": [
-    "\n",
     "def binsearch_recur(numbers, left, right, target):\n",
-    "    \n",
     "\n",
     "    if left <= right:\n",
     "        mid = (left+right) // 2\n",
@@ -90,31 +88,32 @@
     "            return mid\n",
     "        elif numbers[mid] < target:\n",
     "            left = mid + 1\n",
-    "            return binsearch_recur(numbers,left, right, target)\n",
+    "            return binsearch_recur(numbers, left, right, target)\n",
     "        else:\n",
     "            right = mid - 1\n",
-    "            return binsearch_recur(numbers,left, right, target)\n",
+    "            return binsearch_recur(numbers, left, right, target)\n",
     "    else:\n",
     "        return -1\n",
     "\n",
     "\n",
+    "def main():\n",
+    "    # import random\n",
+    "    # numbers = [random.randint(0, 100) for i in range(10)]\n",
+    "    # numbers.sort()\n",
+    "    numbers = [10, 20, 25, 30, 50, 70, 80]\n",
+    "    target = 70\n",
+    "\n",
+    "    print(f'Initial list values: {numbers}')\n",
+    "\n",
+    "    ret = binsearch_recur(numbers, 0, len(numbers)-1, target)\n",
+    "    if ret != -1:\n",
+    "        print(f'Found at {ret}, {numbers[ret]}')\n",
+    "    else:\n",
+    "        print(f'Not Found, {target}')\n",
     "\n",
     "\n",
-    "\n",
-    "import random\n",
-    "numbers = [ random.randint(0,100) for i in range(10)] \n",
-    "numbers = [10, 20, 30,40, 50, 60, 70, 80, 90, 100] \n",
-    "\n",
-    "numbers.sort()\n",
-    "print (f'Initial list values: {numbers}')\n",
-    "\n",
-    "ret = binsearch_recur(numbers, 0, len(numbers)-1, 40)\n",
-    "print (ret)\n",
-    "if ret != -1:\n",
-    "    print (f'Found at {ret}, {numbers[ret]}')\n",
-    "else:\n",
-    "    print (f'Not Found, {numbers[ret]}')\n",
-    "\n"
+    "if __name__ == '__main__':\n",
+    "    main()\n"
    ]
   }
  ],
