--- a/bin.ipynb
+++ b/bin.ipynb
@@ -115,6 +115,122 @@
     "if __name__ == '__main__':\n",
     "    main()\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Version 3 : Polymorphism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student name: John \t ID: 100 \t scores: [100, 100, 100]\n",
+      "Student name: James \t ID: 101 \t scores: [70, 80, 90, 100]\n",
+      "2\n",
+      "Numbers id: 101 \t [90, 91, 93, 95, 100]\n",
+      "Numbers id: 102 \t [100, 110, 130, 140, 105]\n",
+      "4\n",
+      "1\n",
+      "3\n",
+      "4\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Students():\n",
+    "\n",
+    "    def __init__(self, sid, sname, scores):\n",
+    "        self.sid = sid\n",
+    "        self.sname = sname\n",
+    "        self.scores =scores\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return (f'Student name: {self.sname} \\t ID: {self.sid} \\t scores: {self.scores}')\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        if self.sname == other.sname:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def binsearch(self, left, right, target):\n",
+    "        if left <= right:\n",
+    "            mid = (left+right) // 2\n",
+    "            if self.scores[mid] == target:\n",
+    "                return mid\n",
+    "            elif self.scores[mid] < target:\n",
+    "                left = mid + 1\n",
+    "                return self.binsearch(left,right, target)\n",
+    "            else:\n",
+    "                right = mid -1 \n",
+    "                return self.binsearch(left,right, target)\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "class Numbers():\n",
+    "    def __init__(self, nid, scores):\n",
+    "        self.nid = nid\n",
+    "        self.scores = scores\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return (f'Numbers id: {self.nid} \\t {self.scores}')\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        if self.nid == other.nid:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    def binsearch(self, left, right, target):\n",
+    "        if left <= right:\n",
+    "            mid = (left+right) // 2\n",
+    "            if self.scores[mid] == target:\n",
+    "                return mid\n",
+    "            elif self.scores[mid] < target:\n",
+    "                left = mid + 1\n",
+    "                return self.binsearch(left, right, target)\n",
+    "            else:\n",
+    "                right = mid - 1\n",
+    "                return self.binsearch(left, right, target)\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "s1 = Students(100, 'John', [100, 100, 100])\n",
+    "s2 = Students(101, 'James', [70, 80, 90, 100])\n",
+    "print (f'{s1}\\n{s2}')\n",
+    "ret = s2.binsearch(0, len(s2.scores)-1, 90)\n",
+    "print (ret)\n",
+    "\n",
+    "n1 = Numbers(101, [90, 91, 93, 95, 100])\n",
+    "n2 = Numbers(102, [100, 110, 130, 140, 105])\n",
+    "print (f'{n1}\\n{n2}')\n",
+    "\n",
+    "ret = n1.binsearch(0, len(n1.scores)-1, 100)\n",
+    "print (ret)\n",
+    "\n",
+    "\n",
+    "for p in (s1, s2, n1, n2):\n",
+    "    ret = p.binsearch(0, len(p.scores)-1, 100)\n",
+    "    print (ret)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
