--- a/BST.ipynb
+++ b/BST.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "# Binary Search Tree\n",
     "\n",
-    "### (0)Traverse all nodes in BST\n",
-    "### (1) Insertion a Node\n",
-    "### (2) Deletion a Node"
+    "### (0)Traverse all nodes in BST"
    ]
   },
   {
@@ -36,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\t20\t25\t30\t50\t70\t80\t\n"
+      "10\t20\t25\t30\t50\t70\t80\t85\t\n"
      ]
     }
    ],
@@ -74,6 +72,7 @@
     "r = new_node(r, 25)\n",
     "r = new_node(r, 50)\n",
     "r = new_node(r, 80)\n",
+    "r = new_node(r, 85)\n",
     "\n",
     "root = r\n",
     "printNodeInorder(r)\n",
@@ -91,19 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n",
-      "match 20\n",
-      "match 25\n",
-      "***\n",
-      "10\t25\t30\t50\t70\t80\t\n",
-      "30\n"
+      "20\t25\t30\t70\t80\t85\t\n",
+      "Current Root value 30\n"
      ]
     }
    ],
@@ -119,20 +114,17 @@
     "        return root\n",
     "    \n",
     "    if value < root.value:\n",
-    "        print (root.value)\n",
     "        root.left = delete_node(root.left, value)\n",
     "    elif value > root.value:\n",
-    "        print (root.value)\n",
     "        root.right = delete_node(root.right, value)\n",
     "    else:\n",
-    "        print ('match', root.value)\n",
     "        if root.left == None:\n",
     "            tmp = root.right\n",
-    "            root = None\n",
+    "            del root\n",
     "            return tmp\n",
     "        elif root.right == None:\n",
     "            tmp = root.left\n",
-    "            root = None\n",
+    "            del root\n",
     "            return tmp\n",
     "\n",
     "        # In case of two nodes\n",
@@ -144,13 +136,20 @@
     "\n",
     "\n",
     "\n",
+    "# Case 1: delete the leaf node\n",
+    "r = delete_node(r, 10)\n",
     "\n",
-    "r = delete_node(r, 20)\n",
-    "# r = delete_node(r, 10)\n",
-    "print ('***')\n",
+    "# Case 2: delete the node that has single child \n",
+    "# r = delete_node(r, 80)\n",
+    "\n",
+    "# Case 2: delete the node that has two children \n",
+    "r = delete_node(r, 50)\n",
     "printNodeInorder(r)\n",
     "print ()\n",
-    "print (r.value)"
+    "\n",
+    "## Current Root Value\n",
+    "if (r):\n",
+    "    print ('Current Root value', r.value)"
    ]
   }
  ],
