--- a/BST.ipynb
+++ b/BST.ipynb
@@ -146,7 +146,8 @@
     "\n",
     "## Current Root Value\n",
     "if (r):\n",
-    "    print ('Current Root value', r.value)"
+    "    print ('Current Root value', r.value)\n",
+    "print ()"
    ]
   }
  ],
